# unibonn_s12ffrei_cppvorkurs_ss25

./: .gitlab-ci.yml  README.md
code/: .clangd
code/01_hello_world/: a.out  calc.cc  hello  hello.cc  hello2.cc  hello20.cc
code/02_basic_cmake/src/: CMakeLists.txt  basic.cc  basic20.cc
code/03_std_modules/: Makefile  hello11.cc  hello23-mess.cc  hello23.cc
code/04_main_function/src/: CMakeLists.txt  main-demo.cc
code/05_variable_scope/: Makefile  variable_scope.cc
code/06_numeric_limits/: int_limits.cc  int_neg_limits.cc  int_negative.cc
code/07_type_cast/: Makefile  integer_cast.cc
code/10_header_file_example/: hauptprogramm.cc  myheader.h
code/11_floating_point/: complex.cc  float.cc
code/12_literals/: literals.cc  string_literals.cc  string_operations.cc
code/13_const/: const.cc
code/14_operators/: arithmetic_operators.cc  bitshift_operations.cc  comparison.cc  integer_div.cc  logical_operations.cc
code/15_pointers/: pointers.cc  references.cc
code/20_if_switch/: if.cc  switch.cc
code/21_while/: while.cc  while_break.cc  while_if.cc
code/22_for/: break.cc  continue.cc  for_loops.cc  range_based_for.cc
code/23_format/: format.cc
code/24_streams/: input.cc  input_sum.cc  output-stream.cc
code/25_files/: Makefile  filesystem.cc  fstream.cc
code/exercises/01_hello_world_exercise/: CMakeLists.txt  hello.cc
code/exercises/02_datatypes_exercises/: float.cpp  print.cpp
code/exercises/02_datatypes_exercises/source/: CMakeLists.txt  a.out  float  float.cpp  integer  integer.cpp  overflow  overflow.cpp
exercises/: 01_basics.qmd  02_datatypes.qmd  Makefile
exercises/03_kontrollfluss/source/: CMakeLists.txt  Makefile  multitabelle  multitabelle.cpp  prim  prim.cpp  taschenrechner  taschenrechner.cpp  vergleich  vergleich.cpp  wurzel  wurzel.cpp
exercises/04_funktionen/: aufgaben.qmd
exercises/04_funktionen/input/: math.txt
exercises/04_funktionen/source/: csv  csv.cpp  math.cpp  output.csv
exercises/05/: aufgaben.qmd
exercises/05/input/: input.txt
exercises/05/source/: in_out  in_out.cpp  integrate  integrate.cpp  output.csv  overload  overload.cpp
exercises/06/: aufgaben.qmd
exercises/06/header-cmake/include/: double_int.h  simple_math.h
exercises/06/header-cmake/source/: CMakeLists.txt  double_int.cpp  prog1.cpp  prog2.cpp  prog3.cpp  prog4.cpp  simple_math.cpp
exercises/06/unittest/include/: polynomial.h
exercises/06/unittest/source/: CMakeLists.txt  polynomial.cpp
exercises/07/: CMakeLists.txt  aufgaben.qmd  git-guide.txt
exercises/07/include/: teilchen.h  vektor3d.h
exercises/07/src/: main.cpp  teilchen.cpp  vektor3d.cpp
exercises/08/: aufgaben.qmd
exercises/08/docker/: Dockerfile  Makefile
exercises/08/input/: input.txt
exercises/08/source/: array  array.cpp  sort  sort.cpp  vector  vector.cpp
lectures/: 01_einleitung.qmd  02_grundlagen.qmd  03_kontrollstrukturen.qmd  Makefile  _quarto.yml  custom.scss  index.md
